test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_1.k
schema Data(Base):
    name: str
